--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
 	"version": "0.0.1",
 	"private": true,
 	"dependencies": {
+		"@capacitor/android": "4.7.0",
 		"@capacitor/app": "4.1.1",
 		"@capacitor/core": "4.7.0",
 		"@capacitor/haptics": "4.1.0",
+		"@capacitor/ios": "4.7.0",
 		"@capacitor/keyboard": "4.1.1",
 		"@capacitor/status-bar": "4.1.1",
 		"@ionic/react": "^6.0.0",
