--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
 	"version": "0.0.1",
 	"private": true,
 	"dependencies": {
+		"@auth0/auth0-react": "^2.0.1",
 		"@capacitor/android": "4.7.0",
-		"@capacitor/app": "4.1.1",
+		"@capacitor/app": "^4.1.1",
+		"@capacitor/browser": "^4.1.1",
 		"@capacitor/core": "4.7.0",
 		"@capacitor/haptics": "4.1.0",
 		"@capacitor/ios": "4.7.0",
@@ -21,6 +23,7 @@
 		"@types/react-dom": "^18.0.6",
 		"@types/react-router": "^5.1.11",
 		"@types/react-router-dom": "^5.1.7",
+		"dotenv": "^16.0.3",
 		"history": "^4.9.0",
 		"ionicons": "^6.0.3",
 		"react": "^18.2.0",
@@ -46,7 +49,6 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
-		"test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!(@ionic/react|@ionic/react-router|@ionic/core|@stencil/core|ionicons)/)'",
 		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
