--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"ionicons": "^6.1.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-reveal": "^1.2.2",
 		"react-router": "^5.2.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "^5.0.0",
