--- a/package.json
+++ b/package.json
@@ -12,15 +12,21 @@
 		"@capacitor/status-bar": "4.1.1",
 		"@ionic/react": "^6.0.0",
 		"@ionic/react-router": "^6.0.0",
+		"@mapbox/mapbox-sdk": "^0.15.1",
+		"@react-google-maps/api": "^2.18.1",
 		"@testing-library/jest-dom": "^5.11.9",
 		"@testing-library/react": "^13.3.0",
 		"@testing-library/user-event": "^12.6.3",
 		"@types/jest": "^26.0.20",
 		"@types/node": "^12.19.15",
 		"@types/react-router": "^5.1.11",
+		"axios": "^1.4.0",
+		"bingmaps-react": "^1.2.10",
 		"history": "^4.9.0",
 		"ionicons": "^6.1.3",
+		"mapbox-gl": "^2.14.1",
 		"react": "^18.2.0",
+		"react-bingmaps": "^3.6.1",
 		"react-dom": "^18.2.0",
 		"react-reveal": "^1.2.2",
 		"react-router": "^5.2.0",
@@ -72,6 +78,8 @@
 	},
 	"devDependencies": {
 		"@capacitor/cli": "4.7.0",
+		"@types/mapbox__mapbox-sdk": "^0.13.4",
+		"@types/mapbox-gl": "^2.7.11",
 		"@types/react": "^18.0.38",
 		"@types/react-dom": "^18.0.11",
 		"@types/react-router-dom": "^5.3.3"
