--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "events-frontend",
+	"name": "HamEvents-Frontend",
 	"version": "0.0.1",
 	"private": true,
 	"dependencies": {
-		"@auth0/auth0-react": "^2.0.2",
+		"@auth0/auth0-react": "^2.0.1",
 		"@capacitor/android": "4.7.0",
 		"@capacitor/app": "^4.1.1",
 		"@capacitor/browser": "^4.1.1",
@@ -19,17 +19,18 @@
 		"@testing-library/user-event": "^12.6.3",
 		"@types/jest": "^26.0.20",
 		"@types/node": "^12.19.15",
+		"@types/react": "^18.0.17",
+		"@types/react-dom": "^18.0.6",
 		"@types/react-router": "^5.1.11",
 		"@types/react-router-dom": "^5.1.7",
 		"dotenv": "^16.0.3",
 		"history": "^4.9.0",
-		"ionicons": "^6.1.3",
+		"ionicons": "^6.0.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router": "^5.2.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "^5.0.0",
-		"react-scroll-to-top": "^3.0.0",
 		"typescript": "^4.1.3",
 		"web-vitals": "^0.2.4",
 		"workbox-background-sync": "^5.1.4",
@@ -48,9 +49,10 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
-		"test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!(@ionic/react|@ionic/react-router|@ionic/core|@stencil/core|ionicons)/)'",
 		"eject": "react-scripts eject",
+		"test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!(@ionic/react|@ionic/react-router|@ionic/core|@stencil/core|ionicons)/)'",
 		"preinstall": "npm install --package-lock-only --ignore-scripts && npx npm-force-resolutions"
+
 	},
 	"eslintConfig": {
 		"extends": [
@@ -78,9 +80,6 @@
 		"@types/react": "^18.0.38",
 		"@types/react-dom": "^18.0.11",
 		"@types/react-router-dom": "^5.3.3"
-	},
-	"resolutions": {
-		"@types/react": "^17.0.38"
 	},
 	"description": "An Ionic project"
 }
