--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"workbox-background-sync": "^5.1.4",
 		"workbox-broadcast-update": "^5.1.4",
 		"workbox-cacheable-response": "^5.1.4",
+		"react-scroll-to-top": "^3.0.0",
 		"workbox-core": "^5.1.4",
 		"workbox-expiration": "^5.1.4",
 		"workbox-google-analytics": "^5.1.4",
