--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -26,6 +26,22 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLIconFile</key>
+			<string></string>
+			<key>CFBundleURLName</key>
+			<string>com.hamiltonappdev.hamevents</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.hamiltonappdev.hamevents</string>
+			</array>
+		</dict>
+	</array>
+
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
